bin_PROGRAMS = abc
abc_SOURCES = rng.cpp \
		         configuration.cpp \
			 foodSource.cpp \
			 problem.cpp \
			 sphere.cpp \
			 schwefel221.cpp \
			 schwefel213.cpp \
			 rosenbrock.cpp \
			 rastrigin.cpp \
			 griewank.cpp \
			 ackley.cpp \
			 elliptic.cpp \
			 griewank_rosenbrock.cpp \
			 weierstrass.cpp \
			 schwefel.cpp \
			 schwefel222.cpp \
			 schwefel12.cpp \
			 schwefel26.cpp \
			 extendedF10.cpp \
			 bohachevsky.cpp \
			 schaffer.cpp \
			 schafferf6.cpp \
			 happycat.cpp \
			 hgbat.cpp \
			 katsuura.cpp \
			 cigar.cpp \
			 discus.cpp \
			 h1.cpp \
			 h2.cpp \
			 h3.cpp \
			 h4.cpp \
			 h7.cpp \
			 h8.cpp \
			 h9.cpp \
			 h10.cpp \
			 h1cec14.cpp \
			 h2cec14.cpp \
			 h3cec14.cpp \
			 h4cec14.cpp \
			 h5cec14.cpp \
			 h6cec14.cpp \
			 hybrid_composition1.cpp \
			 hybrid_composition2.cpp \
			 hybrid_composition3.cpp \
			 hybrid_composition4.cpp \
			 numsup.cc \
			 ABC.cpp \
			 originalABC.cpp \
			 chaoticmaps.cpp \
			 utils.cpp \
			 main.cpp 
abc_CPPFLAGS = -I. -I tclap-1.2.0/include
abc_LDADD = -lm -lgsl -lgslcblas
